<resources>
    <string name="app_name">VipQA</string>
    <string name="note">Dell/戴尔 Alienware 外星人 17</string>
    <string name="price">￥31999</string>
    <string name="ask">问大家</string>
    <string name="showAll">查看全部问题</string>
    <string name="newQuestion">向已买的人提问，4-40个字</string>
    <string name="newAnswer">回答该问题，4-40个字</string>
    <string name="aboutGoods">的全部问题</string>
    <string name="send">发送</string>
    <string name="query">查看</string>
    <string name="questionDetail">问题详情</string>
    <string name="description">个回答</string>
    <string name="askfirst">我来提问</string>
    <string name="nonequestion">请输入非空问题</string>
    <string name="noneanswer">请输入非空答案</string>
    <string name="answerfirst">我来回答</string>
    <string name="keyword">集思广益 愉快购物</string>
    <string name="visitor">游客</string>
    <string name="visitorIdentity">你好，游客</string>
    <string name="welcomeyou">欢迎来到唯品会问答</string>
    <string name="allproducts">商品列表</string>
    <string name="login">登录</string>
    <string name="logout">注销</string>
    <string name="myOrder">我的订单</string>
    <string name="myQuestion">我的提问</string>
    <string name="myAnswer">我的回答</string>
    <string name="inputAccount">请输入账号，只含数字或字母，6-10位</string>
    <string name="inputPassword">请输入密码，只含数字或字母，6-10位</string>
    <string name="userLogin">唯品会用户登录</string>
    <string name="accept">采纳</string>
    <string name="prosecute">举报</string>
    <string name="tip">请登陆后，长按选择采纳或举报</string>
    <string name="backInfo">采纳成功，下拉刷新后可见</string>
    <string name="score">问答积分</string>
    <string name="mustLogin">问答积分：登录后可见</string>
</resources>
