<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:background="@drawable/back"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/back"
        android:textSize="20sp"
        android:text="@string/ask"
        android:textColor="@color/black"/>

    <ImageButton
        android:id="@+id/refresh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:background="@drawable/refresh"/>

    <TextView
        android:id="@+id/aboutGoods"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/back"
        android:layout_marginTop="10dp"
        android:text="@string/aboutGoods"
        android:textSize="15sp"
        android:textColor="@color/black"/>

    <ListView
        android:id="@+id/allQA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/aboutGoods"/>

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_above="@+id/inputArea"
        android:layout_marginTop="10dp"
        android:background="@color/gray"/>

    <LinearLayout
        android:id="@+id/inputArea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">
        <EditText
            android:id="@+id/inputQuestion"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/newQuestion"/>

        <Button
            android:id="@+id/send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/inputQuestion"
            android:background="@drawable/shape"
            android:minWidth="20dp"
            android:minHeight="20dp"
            android:textColor="@color/pink"
            android:text="@string/send"/>
    </LinearLayout>


</RelativeLayout>